# audioreach-engine

./: CMakeLists.txt
.github/workflows/: armor.yml  qcom-preflight-checks.yml
app/: CMakeLists.txt  prj.conf  sample.yaml
app/boards/: imx8mp_evk_mimx8ml8_adsp.conf  imx8mp_evk_mimx8ml8_adsp.overlay
app/src/: main.c
arch/: Kconfig
arch/hexagon/configs/: defconfig
arch/linux/configs/: defconfig
fwk/platform/modules/: Kconfig
fwk/platform/modules/nxp/endpoint/api/: hw_intf_cmn_api.h  nxp_device_api.h
fwk/platform/modules/nxp/endpoint/capi/inc/: capi_nxp_device.h
fwk/platform/modules/nxp/endpoint/capi/src/: capi_nxp_device.c  capi_nxp_device_i.h  capi_nxp_device_utils.c
modules/: CMakeLists.txt  Kconfig
modules/cmn/common/utils/inc/: audio_iir_tdf2_asm.h
modules/cmn/common/utils/src/: audio_filter.cpp  iir_tdf2.c
public_headers/: config.yml
scripts/cmake/: hexagon-toolchain.cmake  spf.cmake
